Fixed left tile so it aligns verticaly correctly

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -230,8 +230,11 @@ article {
   }
 }
 
-aside {
+section {
   &#tiles aside {
+    padding: 0px 0px;
+    margin: 0px 0px;
+
     &.tile {
       display: inline-block;
       margin: 0px;
@@ -239,15 +242,7 @@ aside {
       width: 320px;
       max-width: 320px;
       color: #000;
-    }
-    &.left {
-      width: 320px;
-      max-width: 320px;
-    }
-    &.right {
-      width: 320px;
-      max-width: 320px;
-      /*width: 318px;*/
+      vertical-align: top;
     }
     &.tile {
       h1 {
